--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              {"glob":"**/*", "input": "src/assets", "output":"./assets"}
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
